--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/react": "^1.2.2",
     "@astrojs/tailwind": "^2.1.3",
     "@astrojs/vercel": "^2.3.6",
+    "@material-tailwind/react": "^1.2.4",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "astro": "^1.7.2",
