--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@astrojs/react": "^1.2.2",
     "@astrojs/tailwind": "^2.1.3",
     "@astrojs/vercel": "^2.3.6",
+    "@auth0/auth0-react": "^1.12.0",
     "@material-tailwind/react": "^1.2.4",
+    "@nanostores/react": "^0.4.1",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "astro": "^1.7.2",
+    "nanostores": "^0.7.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "tailwindcss": "^3.0.24"
